[project]
name = "spatial-data-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "geopy>=2.4.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langchain-qdrant>=0.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "qdrant-client>=1.14.3",
    "rdflib>=7.1.4",
    "requests>=2.32.4",
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.3",
    "uvicorn>=0.35.0",
]
